--- a/itis3135/styles/style.css
+++ b/itis3135/styles/style.css
@@ -3,6 +3,6 @@
 
 body{
     background-color:#1f81a2;
-    font-family: 'Century gothic', sans-serif;
+    font-family: 'Century Gothic', sans-serif;
 }
 
