--- a/itis3135/styles/style.css
+++ b/itis3135/styles/style.css
@@ -3,6 +3,9 @@
 
 body{
     background-color:#1f81a2;
+    background-image: url('../images/waves.gif');
+    background-repeat: repeat;
+    background-attachment: scroll;
     font-family: 'Century Gothic', sans-serif;
 }
 
