--- a/itis3135/styles/style.css
+++ b/itis3135/styles/style.css
@@ -60,3 +60,13 @@ footer a{
     color: #fff;
     font-size: 20px;
 }
+
+
+.center{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align:center;
+    width: 50%;
+}
+
