--- a/itis3135/styles/style.css
+++ b/itis3135/styles/style.css
@@ -53,6 +53,10 @@ footer a{
 small{
     max-width: 10%;
     max-height:10%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align:center;
 }
 
 .school{
