--- a/itis3135/styles/style.css
+++ b/itis3135/styles/style.css
@@ -50,9 +50,8 @@ footer a{
     font-size: 0.8em;
 }
 
-small{
-    max-width: 10%;
-    max-height:10%;
+.small{
+    width: 30%;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -76,6 +75,6 @@ small{
     margin-left: auto;
     margin-right: auto;
     text-align:center;
-    width: 50%;
+    
 }
 
