--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -4,7 +4,7 @@
         <a href="./">Home</a>
         <a href="introduction.html">Introduction</a>
         <a href="contract.html">Contract</a>
-        <a href="WEB SIT😭E.htm">CRAPPY</a>
+        <a href="/WEB SIT😭E.htm">CRAPPY</a>
        <!-- <a href="awesome_salmon/index.html">Awesome Salmon</a>-->
     </nav>
 </header>
