--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -1,6 +1,6 @@
 <header>
     <h1>Abdiel Santana's Awesome Salmon 🐟 ITIS 3135</h1>
-    <nav class="top">
+    <nav>
         <a href="./">Home</a>
         <a href="introduction.html">Introduction</a>
         <a href="contract.html">Contract</a>
