--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -1,10 +1,17 @@
 <header>
     <h1>Abdiel Santana's Awesome Salmon 🐟 ITIS 3135</h1>
     <nav>
-        <a href="./">Home</a>
-        <a href="introduction.html">Introduction</a>
-        <a href="contract.html">Contract</a>
-        <a href="stuff/WEB SIT😭E.htm">CRAPPY</a>
+        <a href="./">Home</a> 
+        🐟
+        <a href="introduction.html">Introduction</a> 
+        🐟
+        <a href="contract.html">Contract</a> 
+        
        <!-- <a href="awesome_salmon/index.html">Awesome Salmon</a>-->
+    </nav>
+    <nav> 
+        🐟
+        <a href="stuff/WEB SIT😭E.htm">CRAPPY</a>
+        🐟
     </nav>
 </header>
