--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -11,6 +11,7 @@
     </nav>
     <nav> 
         <a href="stuff/WEB SIT😭E.htm">CRAPPY</a>
+        <a href="website_evaluations.html">Website Evaluations</a>
         
     </nav>
 </header>
