--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -6,11 +6,11 @@
             <a href="https://www.codecademy.com/profiles/asantana6" target="_blank">Codecademy</a> 🐟 
             <a href="itis3135/index.html">itis3135.io</a> 🐟 
             <a href="https://www.linkedin.com/in/abdiel-santana-rivera-6bb7a7294/" target="_blank">LinkedIn</a> </p> 
-   <!--/*put the links from the doc onto the footer*/-->    
+   <!--/*put the links from the doc onto the footer*/  
    
     <img src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
    
     <img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!">
     
-   
+   -->  
 </footer>
