--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -6,6 +6,8 @@
             <a href="https://www.codecademy.com/profiles/asantana6" target="_blank">Codecademy</a> 🐟 
             <a href="itis3135/index.html">itis3135.io</a> 🐟 
             <a href="https://www.linkedin.com/in/abdiel-santana-rivera-6bb7a7294/" target="_blank">LinkedIn</a> </p> 
+
+            <p>Page Designed by <a href="santana_corp.com/">Santana Corp</a> </p>
    <!--/*put the links from the doc onto the footer*/  
    
     <img src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
