--- a/itis3135/styles/style.css
+++ b/itis3135/styles/style.css
@@ -97,3 +97,51 @@ figcaption{
 h1{
     font-size: 2em;
 }
+
+main { 
+    max-width: 1200px; 
+    width: 95%;
+    margin: 0 auto;
+    /* Adjust as needed */ 
+}
+
+
+@media (max-width: 1199px) and (min-width: 769px) {
+    main{
+        width: 60%;
+    }
+}
+
+
+
+@media (max-width: 768px) {
+    main{
+        width: 30%;
+        margin: 0 auto;
+
+    }
+    
+ 
+  }
+
+  
+/* Rule Overrides For Laptops / Small Screens */
+@media screen and ( min-width: 981px ) and ( max-width: 1400px ) {
+    main{
+        width: 50%;
+    }
+}
+
+/* Rule Overrides For Tablet Devices */
+@media screen and ( min-width: 601px ) and ( max-width: 980px )  {
+    main{
+        width: 60%;
+    }
+}
+
+/* Rule Overrides For Mobile Devices */
+@media screen and ( min-width: 370px ) and ( max-width: 600px ) {
+    main{
+        width: 30%;
+    }
+}
