--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -12,6 +12,6 @@
     <nav> 
         <a href="stuff/WEB SIT😭E.htm">CRAPPY</a>
         <a href="website_evaluations.html">Website Evaluations</a>
-        
+        <a href="hobby/index.html">Hobby</a>
     </nav>
 </header>
