--- a/itis3135/hobby/styles.css
+++ b/itis3135/hobby/styles.css
@@ -59,10 +59,10 @@ figcaption{
 
 .small{
     width:55%;
-    display: block;
+/*    display: block;
     margin-left: auto;
     margin-right: auto;
-    text-align:center;
+    text-align:center;*/
 }
 
 h2{
@@ -77,7 +77,27 @@ footer{
     text-align:center;
 }
 
+.container{
+    display:flex;
+    justify-content: space-between; /* Space between text and image */
+    align-items: center; /* Vertically center text and image */
+    height: 100vh; /* Full viewport height */
+    padding: 20px;
+}
 
+.right{
+    flex:1;
+    padding-right:20px; 
+}
+
+.left{
+    max-width:400px;
+    height:auto;
+    width:100%;
+}
+
+
+/**
 @media (max-width: 1199px) and (min-width: 769px) {
     body{
         width: 60%;
@@ -97,23 +117,24 @@ footer{
   }
 
   
-/* Rule Overrides For Laptops / Small Screens */
+/* Rule Overrides For Laptops / Small Screens 
 @media screen and ( min-width: 981px ) and ( max-width: 1400px ) {
     body{
         width: 50%;
     }
 }
 
-/* Rule Overrides For Tablet Devices */
+/* Rule Overrides For Tablet Devices 
 @media screen and ( min-width: 601px ) and ( max-width: 980px )  {
     body{
         width: 60%;
     }
 }
 
-/* Rule Overrides For Mobile Devices */
+/* Rule Overrides For Mobile Devices 
 @media screen and ( min-width: 370px ) and ( max-width: 600px ) {
     body{
         width: 30%;
     }
-}
+}*/
+
