--- a/itis3135/hobby/styles.css
+++ b/itis3135/hobby/styles.css
@@ -59,10 +59,10 @@ figcaption{
 
 .small{
     width:55%;
-/*    display: block;
+   display: block;
     margin-left: auto;
     margin-right: auto;
-    text-align:center;*/
+    text-align:center;
 }
 
 h2{
