--- a/itis3135/hobby/styles.css
+++ b/itis3135/hobby/styles.css
@@ -77,11 +77,12 @@ footer{
     text-align:center;
 }
 
+/*
 .container{
     display:flex;
-    justify-content: space-between; /* Space between text and image */
-    align-items: center; /* Vertically center text and image */
-    height: 100vh; /* Full viewport height */
+    justify-content: space-between; /* Space between text and image 
+    align-items: center; /* Vertically center text and image 
+    height: 100vh; /* Full viewport height 
     padding: 20px;
 }
 
@@ -95,6 +96,7 @@ footer{
     height:auto;
     width:100%;
 }
+    */
 
 
 /**
