--- a/itis3135/hobby/styles.css
+++ b/itis3135/hobby/styles.css
@@ -3,6 +3,9 @@ body {
     max-width: 1200px; 
     width: 95%;
     margin: 0 auto;
+    padding: 20px;
+    padding-right:20px;
+    height:100vh;
     /* Adjust as needed */ 
 }
 
@@ -76,6 +79,7 @@ footer{
     margin-right: auto;
     text-align:center;
 }
+
 
 /*
 .container{
