--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -13,5 +13,6 @@
         <a href="stuff/WEB SIT😭E.htm">CRAPPY</a>
         <a href="website_evaluations.html">Website Evaluations</a>
         <a href="hobby/index.html">Hobby</a>
+        <a href="tables.html">Tables</a>
     </nav>
 </header>
