--- a/itis3135/styles/style.css
+++ b/itis3135/styles/style.css
@@ -106,6 +106,26 @@ main {
 }
 
 
+
+tr, td {
+    padding: 10px;
+    border: black 1.5px solid;
+    
+    color: #fff;
+  
+    font-size: 0.8em;
+}
+
+th{
+    border: black 1.5px solid;
+    
+    background-color: #0b4d63;
+}
+
+table tr:nth-child(even) {
+    background-color: #18627a;
+    }
+
 @media (max-width: 1199px) and (min-width: 769px) {
     main{
         width: 60%;
