--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -14,5 +14,6 @@
         <a href="website_evaluations.html">Website Evaluations</a>
         <a href="hobby/index.html">Hobby</a>
         <a href="tables.html">Tables</a>
+        <a href="byo_intro.html">Forms</a>
     </nav>
 </header>
