--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -6,6 +6,7 @@
         <a href="introduction.html">Introduction</a> 
         
         <a href="contract.html">Contract</a> 
+        <a href="byo_intro.html">Forms</a>
         
        <!-- <a href="awesome_salmon/index.html">Awesome Salmon</a>-->
     </nav>
@@ -14,6 +15,6 @@
         <a href="website_evaluations.html">Website Evaluations</a>
         <a href="hobby/index.html">Hobby</a>
         <a href="tables.html">Tables</a>
-        <a href="byo_intro.html">Forms</a>
+        <a href="project_overview.html">Client Project</a>
     </nav>
 </header>
