--- a/itis3135/styles/style.css
+++ b/itis3135/styles/style.css
@@ -64,6 +64,15 @@ a:hover{
     text-align:center;
 }
 
+.medium{
+    width: 250px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align:center;
+}
+
+
 .school{
     background-color:#1f81a2;
   
