--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -16,5 +16,6 @@
         <a href="hobby/index.html">Hobby</a>
         <a href="tables.html">Tables</a>
         <a href="project_overview.html">Client Project</a>
+        <a href="client/index.html">Project 2</a>
     </nav>
 </header>
