--- a/itis3135/client/styles/style.css
+++ b/itis3135/client/styles/style.css
@@ -7,7 +7,8 @@ header{
 }
 
 body{
-    margin: 0px;
+    margin: 10px;
+    background-color: beige;
 }
 
 footer{
@@ -16,4 +17,21 @@ footer{
     padding: 10px;
     text-align: center;
     margin: 0px;
+}
+
+img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    max-width: 400px;
+}
+
+a{
+    color: rgb(103, 192, 224);
+}
+
+a:hover{
+    color: rgb(0, 0, 0);
+    background-color: rgb(103, 192, 224);
 }
