--- a/itis3135/client/styles/style.css
+++ b/itis3135/client/styles/style.css
@@ -19,9 +19,9 @@ footer{
     margin: 0px;
 }
 
-img{
-    display: flex;
- 
+img{    
+    display: block;
+    
     padding: 10px;
     width: 50%;
     max-width: 400px;
