--- a/itis3135/client/styles/style.css
+++ b/itis3135/client/styles/style.css
@@ -20,8 +20,8 @@ footer{
 }
 
 img{    
-    display: block;
-    
+    display: grid;
+
     padding: 10px;
     width: 50%;
     max-width: 400px;
