--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -4,7 +4,7 @@
           <a href="https://webpages.charlotte.edu/asantan6/">CLT Webspace</a> 🐟
            <a href="https://www.freecodecamp.org/asantana" target="_blank">freeCodeCamp</a> 🐟
             <a href="https://www.codecademy.com/profiles/asantana6" target="_blank">Codecademy</a> 🐟 
-            <a href="itis3135/index.html">itis3135.io</a> 🐟 
+            <a href="https://asantana6.github.io/itis3135/">itis3135.io</a> 🐟 
             <a href="https://www.linkedin.com/in/abdiel-santana-rivera-6bb7a7294/" target="_blank">LinkedIn</a> </p> 
 
             <p>Page Designed by <a href="santana_corp.com/">Santana Corp</a>, Certified in <a href="https://www.freecodecamp.org/certification/asantana/responsive-web-design">Responsive Web Design</a></p>
