--- a/itis3135/styles/style.css
+++ b/itis3135/styles/style.css
@@ -197,9 +197,9 @@ table tr:nth-child(even) {
 }
 
 .caption {
-    color: #333;
+    color: #000000;
     font-size: 20px;
-    padding: 8px 12px;
+
     position: relative;
     bottom: 8px;
     width: 100%;
@@ -243,14 +243,14 @@ table tr:nth-child(even) {
     height: 15px;
     width: 15px;
     margin: 0 2px;
-    background-color: #bbb;
+    background-color: #000000;
     border-radius: 50%;
     display: inline-block;
     transition: background-color 0.6s ease;
 }
 
 .active, .dot:hover {
-    background-color: #717171;
+    background-color: #a4a4a4;
 }
 
 .fade {
@@ -271,12 +271,11 @@ table tr:nth-child(even) {
 }
 
 .thumbnail {
-    width: 100px;
-    height: 75px;
+    width: 8%;
     object-fit: cover;
     margin: 5px;
     cursor: pointer;
-    border: 2px solid #ddd;
+ 
     border-radius: 4px;
 }
 
@@ -287,6 +286,6 @@ table tr:nth-child(even) {
 .references {
     margin-top: 30px;
     padding: 20px;
-    background-color: #f5f5f5;
+    background-color: #0e435c;
     border-radius: 8px;
 }
