--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -17,5 +17,6 @@
         <a href="tables.html">Tables</a>
         <a href="project_overview.html">Client Project</a>
         <a href="client/index.html">Client Website</a>
+        <a href="slideshow.html">Slideshow</a>
     </nav>
 </header>
