--- a/itis3135/client/styles/style.css
+++ b/itis3135/client/styles/style.css
@@ -48,6 +48,7 @@ a:hover{
 
 .mySlides {
     display: none;
+    align-items: center;
     text-align: center;
 }
 
@@ -55,6 +56,8 @@ a:hover{
     width: 100%;
     height: 500px;
     object-fit: cover;
+    align-items: center;
+    margin: auto;
     border-radius: 8px;
 }
 
