--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -18,5 +18,7 @@
         <a href="project_overview.html">Client Project</a>
         <a href="client/index.html">Client Website</a>
         <a href="slideshow.html">Slideshow</a>
+        <a href="review1.html">Review 1</a>
+        <a href="review2.html">Review 2</a>
     </nav>
 </header>
