--- a/itis3135/client/components/header.html
+++ b/itis3135/client/components/header.html
@@ -6,4 +6,16 @@
             <a href="about.html">About Me</a>
             <a href="contact.html">Contact</a>
     </nav>
+
+    <nav>
+        <a href="#index" class="nav-link" data-target="index">Home</a>
+        🎭
+        <a href="#port" class="nav-link" data-target="port">Portfolio</a>
+        🎭
+        <a href="#media" class="nav-link" data-target="media">Media</a>
+        🎭
+        <a href="#about" class="nav-link" data-target="about">About Me</a>
+        🎭
+        <a href="#contact" class="nav-link" data-target="contact">Contact</a>
+    </nav>
 </header>
