--- a/itis3135/client/components/header.html
+++ b/itis3135/client/components/header.html
@@ -1,13 +1,13 @@
 <header>
     <nav>
-            <a href="index.html">Home</a>
-            <a href="portfolio.html">Portfolio</a>
-            <a href="media.html">Media</a>
-            <a href="about.html">About Me</a>
+            <a href="index.html">Home</a>🎭
+            <a href="portfolio.html">Portfolio</a>🎭
+            <a href="media.html">Media</a>🎭
+            <a href="about.html">About Me</a>🎭
             <a href="contact.html">Contact</a>
     </nav>
 
-    <nav>
+    <!--nav>
         <a href="#index" class="nav-link" data-target="index">Home</a>
         🎭
         <a href="#port" class="nav-link" data-target="port">Portfolio</a>
@@ -17,5 +17,5 @@
         <a href="#about" class="nav-link" data-target="about">About Me</a>
         🎭
         <a href="#contact" class="nav-link" data-target="contact">Contact</a>
-    </nav>
+    </nav-->
 </header>
