--- a/itis3135/client/styles/style.css
+++ b/itis3135/client/styles/style.css
@@ -9,6 +9,7 @@ header{
 body{
     margin: 10px;
     background-color: beige;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 footer{
